--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
 body {
-  padding: 50px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
@@ -71,4 +70,38 @@ input[type="color"] {
 .label {
   font-size: 14px;
   text-transform: uppercase;
+}
+
+.content {
+  padding: 50px;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+.column {
+  flex-direction: column;
+}
+
+section {
+  display: flex;
+  flex: 1;
+}
+
+/* react wrapper lib does not accept class or styles., so it needs to be targeted in this manner */
+section > div {
+  display: flex;
+  flex-basis: 100%;
+}
+
+footer {
+  display: flex;
+  font-size: 14px;
+  justify-content: center;
+  align-items: center;
+  padding: 40px 0 0;
+}
+
+footer a {
+  padding: 0 5px;
 }
