--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,11 @@ nav a {
 a {
   color: deeppink;
   text-decoration: none;
+  transition: 0.3s all ease;
+}
+
+a:hover {
+  color: hotpink;
 }
 
 p {
@@ -89,7 +94,7 @@ section {
 }
 
 /* react wrapper lib does not accept class or styles., so it needs to be targeted in this manner */
-section > div {
+.sketch > div {
   display: flex;
   flex-basis: 100%;
 }
@@ -104,4 +109,32 @@ footer {
 
 footer a {
   padding: 0 5px;
+}
+
+.examples {
+  display: flex;
+  flex-flow: wrap;
+}
+
+.item {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 33%;
+  padding-right: 30px;
+}
+
+.item img {
+  border-radius: 30px;
+  display: flex;
+  max-width: 100%;
+  max-height: 200px;
+  object-fit: cover;
+  flex-basis: 100%;
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05);
+  transition: 0.3s all ease;
+}
+
+.item img:hover {
+  transform: scale(1.01);
 }
