--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ p {
   line-height: 1.5;
   letter-spacing: 0.5;
   font-size: 18px;
+  font-weight: 300;
   padding-bottom: 1em;
   max-width: 50vw;
 }
